--- a/styles.css
+++ b/styles.css
@@ -3,8 +3,18 @@
     display: flex;
     width: 500px;
     height: 800px;
-    background-color: #eee;
+    background-color: rgb(204, 202, 202);
     position: relative;
+    
+    
+  }
+
+  #startButton {
+    display: block;
+    width: 50px;
+    height: 50px;
+    background-color: green;
+
   }
 
   #score {
@@ -12,6 +22,27 @@
     top: 0;
     right: 0;
     font-size: 20px;
+  }
+
+  #a {
+    background-color: rgba(0, 0, 255, 0.323);
+    height: 925px;
+    width: 125px;
+  }
+  #s {
+    background-color: rgba(255, 60, 0, 0.384);
+    height: 925px;
+    width: 125px;
+  }
+  #d {
+    background-color: rgba(225, 255, 0, 0.412);
+    height: 925px;
+    width: 125px;
+  }
+  #f {
+    background-color: rgba(4, 255, 0, 0.398);
+    height: 925px;
+    width: 125px;
   }
 
   .note {
@@ -26,7 +57,7 @@
 	  width: 500px;
     height: 125px;
     background-color: rgba(0, 0, 0, 0.137);
-    border: 4px, black, solid;
+    border-top: 4px, white, solid;
     position: absolute;
     top: 800px;
   }
